# media-dashboard

./: .gitignore  README.md  app.py  pyproject.toml  settings.py
media_dashboard/commands/: dump_for_kodi.py  update_media_database.py
media_dashboard/lib/: nfo_parser.py
media_dashboard/services/: kodi_dumper.py  media_database_updater.py  media_scanner.py
tests/lib/: test_nfo_parser.py
tests/media_dashboard/: test_movie_file.py
tests/media_dashboard/update_media_database/: test_config.env  test_media_database_updater.py
