[tool.poetry]
name = "media-dashboard"
version = "0.1.0"
description = "Get some stats from your exported Kodi / Synology VideoStation media library"
authors = ["GdPaul1234 <paul.godin1234@outlook.fr>"]
readme = "README.md"
packages = [{include = "media_dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.6.0"
jinja2 = "^3.1.2"
pydantic = {extras = ["dotenv"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
pydantic-xml = "^2.2.4"
mpire = {extras = ["dashboard"], version = "^2.8.0"}
requests = "^2.31.0"
deffcode = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
